rnsc/test_data/integration/error/parser/outside_class_directive/integer.rns
42 ; the answer
.class public HelloWorld

.super java/lang/Object
